--- a/Surrogate/View/ConnectionsCheckerView.xaml
+++ b/Surrogate/View/ConnectionsCheckerView.xaml
@@ -1,11 +1,17 @@
-﻿<UserControl x:Class="Surrogate.View.ConnectionsChecker.ConnectionsCheckerView"
+﻿<UserControl 
+    x:Class="Surrogate.View.ConnectionsChecker.ConnectionsCheckerView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <StackPanel DockPanel.Dock="Right" Margin="5">
-        <Label Margin="1" Background="Red" Content="Databasae"/>
-        <Label Margin="1" Background="Red" Content="Camera1"/>
-        <Label Margin="1" Background="Red" Content="Camera2"/>
-        <Label Margin="1" Background="Red" Content="Motor"/>
-        <Label Margin="1" Background="Red" Content="Touchpad"/>
+        <StackPanel.Resources>
+            <Style TargetType="ListViewItem">
+                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="FontWeight" Value="Bold"/>
+            </Style>
+        </StackPanel.Resources>
+        <ListView x:Name="lvConnections"
+                  ItemsSource="{Binding Path=connections}">
+
+        </ListView>
     </StackPanel>
 </UserControl>
