--- a/Surrogate/View/ControllerView/MainControllerView.xaml
+++ b/Surrogate/View/ControllerView/MainControllerView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Surrogate.Main.MainWindow"
+﻿<Window x:Class="Surrogate.View.ControllerView.MainControllerView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -57,8 +57,10 @@
             <Label FontWeight="Bold">Log</Label>
             <vwl:LoggingView/>
         </StackPanel>
-        <WrapPanel x:Name="spModule" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label>Content of current module</Label>
-        </WrapPanel>
+        <Grid>
+            <StackPanel x:Name="spModule" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <Label>Content of current module</Label>
+            </StackPanel>
+        </Grid>
     </DockPanel>
 </Window>
