--- a/Surrogate/View/ControllerView/ModuleView/VideoChatView.xaml
+++ b/Surrogate/View/ControllerView/ModuleView/VideoChatView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Surrogate.View.VideoChatView"
+﻿<base:ModuleView x:Class="Surrogate.View.VideoChatView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:OpenTok="clr-namespace:OpenTok;assembly=WPFVideoRenderer"
-        xmlns:local="clr-namespace:Surrogate.View"
+        xmlns:base="clr-namespace:Surrogate.View"
         mc:Ignorable="d">
     <DockPanel>
         <StackPanel DockPanel.Dock="Left">
@@ -28,4 +28,4 @@
         </StackPanel>
     </DockPanel>
 
-</UserControl>
+</base:ModuleView>
