--- a/Surrogate/View/ControllerView/ModuleView/ConnectionsHandlerView.xaml
+++ b/Surrogate/View/ControllerView/ModuleView/ConnectionsHandlerView.xaml
@@ -1,7 +1,8 @@
-﻿<UserControl 
+﻿<base:ModuleView 
     x:Class="Surrogate.View.ConnectionsChecker.ConnectionsCheckerView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:base="clr-namespace:Surrogate.View">
     <StackPanel DockPanel.Dock="Right" Margin="5">
         <StackPanel.Resources>
             <Style TargetType="ListViewItem">
@@ -11,7 +12,6 @@
         </StackPanel.Resources>
         <ListView x:Name="lvConnections"
                   ItemsSource="{Binding Path=connections}">
-
         </ListView>
     </StackPanel>
-</UserControl>
+</base:ModuleView>
