--- a/Surrogate/View/ControllerView/ModuleView/ConnectionsHandlerView.xaml
+++ b/Surrogate/View/ControllerView/ModuleView/ConnectionsHandlerView.xaml
@@ -10,27 +10,13 @@
                 <Setter Property="FontWeight" Value="Bold"/>
             </Style>
         </StackPanel.Resources>
+        <Label Content="Verbindungsstatus"/>
         <ListView x:Name="lvConnections">
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListViewItem}">
                     <EventSetter Event="MouseDoubleClick" Handler="ListViewItem_MouseDoubleClick" />
                 </Style>
             </ListView.ItemContainerStyle>
-            <ListView.Resources>
-                <Style TargetType="ListViewItem">
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding Color}" Value="Green">
-                            <Setter Property="Background" Value="Green"/>
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding Color}" Value="Red">
-                            <Setter Property="Background" Value="Red"/>
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding Color}" Value="Yellow">
-                            <Setter Property="Background" Value="Yellow"/>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </ListView.Resources>
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -41,6 +27,21 @@
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <StackPanel  Width="150" MaxHeight="50" Grid.Column="0" Grid.Row="0" Orientation="Horizontal" >
+                              <StackPanel.Resources>
+                                <Style TargetType="StackPanel">
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding Status}" Value="Ready">
+                                            <Setter Property="Background" Value="Green"/>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding Status}" Value="Disconnected">
+                                            <Setter Property="Background" Value="Red"/>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding Status}" Value="Connected">
+                                            <Setter Property="Background" Value="Yellow"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </StackPanel.Resources>
                             <TextBlock VerticalAlignment="Center" Text="{Binding Name}" FontWeight="ExtraBlack" TextWrapping="Wrap" Padding="10"/>
                         </StackPanel>
                     </Grid>
