--- a/Surrogate/View/ControllerView/ModuleView/ConnectionsHandlerView.xaml
+++ b/Surrogate/View/ControllerView/ModuleView/ConnectionsHandlerView.xaml
@@ -1,4 +1,4 @@
-﻿<base:ModuleView 
+﻿<base:ModuleViewBase
     x:Class="Surrogate.View.Handler.ConnectionsHandlerView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -50,4 +50,4 @@
             </ListView.ItemTemplate>
         </ListView>
     </StackPanel>
-</base:ModuleView>
+</base:ModuleViewBase>
