--- a/Surrogate/View/ControllerView/ModuleView/StartModuleView.xaml
+++ b/Surrogate/View/ControllerView/ModuleView/StartModuleView.xaml
@@ -1,4 +1,4 @@
-﻿<base:ModuleView x:Class="Surrogate.View.StartModuleView"
+﻿<base:ModuleViewBase x:Class="Surrogate.View.StartModuleView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:base="clr-namespace:Surrogate.View">
@@ -17,4 +17,4 @@
                    FontSize="15"
                    TextWrapping="Wrap">Willkomen im Surrogate Programm Framework. Wählen Sie das gewünschte Modul aus der Liste am Rand.</TextBlock>
     </Grid>
-</base:ModuleView>
+</base:ModuleViewBase>
