--- a/Surrogate/View/ControllerView/ModuleView/VideoChatModuleView.xaml
+++ b/Surrogate/View/ControllerView/ModuleView/VideoChatModuleView.xaml
@@ -1,4 +1,4 @@
-﻿<base:ModuleView x:Class="Surrogate.View.VideoChatView"
+﻿<base:ModuleViewBase x:Class="Surrogate.View.VideoChatModuleView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -60,4 +60,4 @@
         </StackPanel>
     </DockPanel>
 
-</base:ModuleView>
+</base:ModuleViewBase>
